# variant

./: .gitignore  CMakeLists.txt  Variant.h  main.cpp
test/: CMakeLists.txt  VariantTest.h  variant_tests.cpp
